--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,7 +1,7 @@
 ---
-title: "Page Not Found!"
+title: "*Page Not Found... maybe keep looking?*"
 layout: single
-excerpt: "Page not found... maybe keep looking?"
+excerpt: "Page not found!"
 sitemap: false
 permalink: /404.html
 ---
