--- a/_posts/2020-06-05-cpp_hw.md
+++ b/_posts/2020-06-05-cpp_hw.md
@@ -5,13 +5,13 @@ tags: [computer science, C++]
 header: 
     excerpt: "Computer Science, C++"
 ---
-#12.1(Maximum in Array)
+<h1>12.1(Maximum in Array)</h1>
 Design a generic function maxFromArr() that returns a maximum element from an array. The function should have two parameters. One is the array of a generic type named arr, and the other is the size of the array size.
 
 Test the function with the array of int, double, and string values.
 
-'''c++
-    #include <string>
+```c++
+#include <string>
 #include <iostream>
 using namespace std; 
  
@@ -40,4 +40,4 @@ int main(){
    cout << "Max in string array: " << maxFromArr(strArr,2) << endl;
    return 0; 
 }
-'''
+```
